# mimirsbrunn

./: .gitattributes  .gitlab-ci.yml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml  docker.yml  master.yml  master7.yml  release.yml  release7.yml
benches/: indexing.rs  listing.rs  searching.rs
ci/: bootstrap.sh  docker-compose.build.yml
config/: bano-importer.toml  cosmogony-importer.toml  elasticsearch.toml  geocoder.toml  openaddresses-importer.toml  osm-importer.toml  query-config.toml
config/bano2mimir/: default.toml
config/bragi/: default.toml
config/cosmogony2mimir/: default.toml
config/docker/: default.toml
config/elasticsearch/: default.toml
config/elasticsearch/templates/components/: mimir-base.json  mimir-dynamic-mappings.json
config/elasticsearch/templates/indices/: mimir-addr.json  mimir-admin.json  mimir-poi.json  mimir-stop.json  mimir-street.json
config/ntfs2mimir/: default.toml
config/openaddresses2mimir/: default.toml
config/osm2mimir/: default.toml
config/poi2mimir/: default.toml
config/query/: default.toml
crates/bins/bano-importer/: Cargo.toml
crates/bins/bano-importer/src/: lib.rs  main.rs
crates/bins/cosmogony-importer/: Cargo.toml
crates/bins/cosmogony-importer/src/: lib.rs  main.rs
crates/bins/ctl-importer/: Cargo.toml
crates/bins/ctl-importer/src/: lib.rs  main.rs
crates/bins/geo-query/: Cargo.toml
crates/bins/geo-query/src/: main.rs
crates/bins/geocoder-server/: Cargo.toml  README.md
crates/bins/geocoder-server/src/: api.rs  docs.rs  errors.rs  extractors.rs  handlers.rs  main.rs  routes.rs  server.rs  settings.rs
crates/bins/geocoder-server/src/route/: autocomplete.rs  explain.rs  mod.rs  reverse.rs  search.rs  status.rs
crates/bins/ntfs-importer/: Cargo.toml
crates/bins/ntfs-importer/src/: lib.rs  main.rs  stops.rs
crates/bins/openaddresses-importer/: Cargo.toml
crates/bins/openaddresses-importer/src/: lib.rs  main.rs
crates/bins/osm-importer/: Cargo.toml
crates/bins/osm-importer/src/: lib.rs  main.rs
crates/bins/poi-importer/: Cargo.toml
crates/bins/poi-importer/src/: lib.rs  main.rs  pois.rs
crates/bins/tagger-api/: Cargo.toml  README.md
crates/bins/tagger-api/src/: docs.rs  dto.rs  errors.rs  main.rs  override_legacy.rs
crates/libs/axum-common/: Cargo.toml
crates/libs/axum-common/src/: error.rs
crates/libs/axum-common/src/extract/: json.rs  mod.rs  query.rs
crates/libs/elastic-client/: Cargo.toml
crates/libs/elastic-client/src/: configuration.rs  dto.rs  errors.rs  generate_index.rs  internal.rs  lib.rs  remote.rs  settings.rs  status.rs  storage.rs  templates.rs
crates/libs/elastic-client/src/model/: configuration.rs  error.rs  index.rs  mod.rs
crates/libs/elastic-query-builder/: Cargo.toml
crates/libs/elastic-query-builder/src/: doc_type.rs  dsl.rs  filters.rs  geocoding.rs  indices.rs  lib.rs  query.rs  settings.rs
crates/libs/exporter-config/: Cargo.toml
crates/libs/exporter-config/src/: lib.rs
crates/libs/lib-geo/: Cargo.toml
crates/libs/lib-geo/src/: addr_reader.rs  admin.rs  admin_geofinder.rs  bano.rs  error.rs  errors.rs  labels.rs  lib.rs  openaddresses.rs
crates/libs/lib-geo/src/osm_reader/: database.rs  errors.rs  mod.rs  osm_store.rs  osm_utils.rs  poi.rs  street.rs
crates/libs/lib-geo/src/settings/: admin_settings.rs
crates/libs/lib-geo/src/utils/: mod.rs  template.rs
crates/libs/places/: Cargo.toml
crates/libs/places/src/: addr.rs  admin.rs  context.rs  coord.rs  lib.rs  poi.rs  rect.rs  stop.rs  street.rs  utils.rs
crates/libs/qwant-geojson/: Cargo.toml
crates/libs/qwant-geojson/src/: errors.rs  lib.rs
crates/libs/qwant-geojson/src/conversion/: from_geo_types.rs  mod.rs  to_geo_types.rs
crates/libs/qwant-geojson/tests/: roundtrip.rs
crates/libs/runtime/: Cargo.toml
crates/libs/runtime/src/: lib.rs
crates/libs/serde-helpers/: Cargo.toml
crates/libs/serde-helpers/src/: lib.rs
crates/libs/tagger/: Cargo.toml
crates/libs/tagger/assets/: brand.json  capital_fr.json  categories.json  cities.json  cities_districts.json  countries.json  districts.json  states.json  suburbs.json  ville_france.json
crates/libs/tagger/benches/: tagger.rs
crates/libs/tagger/src/: errors.rs  lib.rs  tokens.rs
crates/libs/tagger/src/tagger/: address.rs  brand.rs  category.rs  location.rs  mod.rs
crates/tests/test-containers/: Cargo.toml
crates/tests/test-containers/src/: container.rs  lib.rs  port.rs  wait.rs
crates/tests/test-harness/: Cargo.toml
crates/tests/test-harness/src/: bano.rs  cosmogony.rs  download.rs  lib.rs  ntfs.rs  osm.rs
docker/: entrypoint.sh  run_with_default_config.sh
docker/bragi/: Dockerfile
docker/mimirsbrunn/: Dockerfile
docker/tagger/: Dockerfile  build_libpostal.sh
docs/: bragi-architecture.md  indexing.md
docs/process/: elasticsearch.md  testing.md
libs/common/: Cargo.toml
libs/common/src/: config.rs
libs/mimir/: Cargo.toml
libs/mimir/src/adapters/primary/: templates.rs
libs/mimir/src/adapters/primary/bragi/: api.rs  handlers.rs  routes.rs
libs/mimir/src/adapters/primary/common/: dsl.rs  filters.rs  settings.rs
libs/mimir/src/adapters/secondary/elasticsearch/: explain.rs  internal.rs  list.rs  (+2 more)
libs/mimir/src/domain/model/: configuration.rs  error.rs  stats.rs
libs/mimir/src/tests/: generate_and_update.rs
libs/mimir/src/utils/: docker.rs
libs/places/: Cargo.toml
libs/places/src/: admin.rs  coord.rs  poi.rs  stop.rs  street.rs
libs/tests/: Cargo.toml
libs/tests/src/: bano.rs  cosmogony.rs  ntfs.rs  osm.rs
src/: addr_reader.rs  admin.rs  admin_geofinder.rs  bano.rs  error.rs  openaddresses.rs  pois.rs  stops.rs
src/bragi/: server.rs  settings.rs
src/osm_reader/: osm_utils.rs  poi.rs  street.rs
src/settings/: bano2mimir.rs  cosmogony2mimir.rs  ctlmimir.rs  ntfs2mimir.rs  openaddresses2mimir.rs  osm2mimir.rs  poi2mimir.rs
src/utils/: mod.rs  slice.rs
tests/: end_to_end.rs  error.rs  idf.rs  state.rs  stops.rs
tests/fixtures/: sample-oa.csv
tests/steps/: address.rs  admin.rs  download.rs  get.rs  mod.rs  poi.rs  search.rs  stop.rs  street.rs
(+3 files in other folders)
