[workspace]
members = [
    "crates/libs/*",
    "crates/tests/*",
    "crates/bins/*",
]

[workspace.dependencies]
elasticsearch = "8.4.0-alpha.1"
lazy_static = "1.4"
regex = "1.5.5"
semver = "1.0.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = "3.0.0"
serde_qs = "0.12.0"
thiserror = "1.0.40"
anyhow = "1.0"
tokio = { version = "1.14.0", features = ["sync", "rt-multi-thread", "macros", "process", "fs", "io-util"] }
tokio-stream = { version = "0.1.8", features = ["fs"] }
tracing = "0.1.37"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-compression = { version = "0.4.0", features = ["gzip", "tokio"] }
warp = "0.3.2"
axum = { version = "0.6.18", features = ["json"] }
axum-macros = "0.3.7"
axum-jsonschema = { version = "0.6.0", features = ["aide"] }
tower-http = { version = "0.4.1", features = ["trace", "set-header", "timeout"] }
tower = { version = "0.4.13", features = ["timeout"] }
aide = { version = "0.11.0", features = ["redoc", "axum", "axum-extra", "macros", ] }
schemars = { version = "0.8.12", features = ["uuid1"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6.6"
url = { version = "2.2", features = ["serde"] }
http = "0.2"
address-formatter = "0.2"
clap = { version = "4.3.21", features = ["derive", "env"] }
config = { version = "0.11", default_features = false, features = ["json", "toml"] }
cosmogony = "0.14.2"
csv-async = { version = "1.2", features = ["tokio", "with_serde"] }
futures = "0.3"
geo = "0.26.0"
geo-types = { version = "0.7.11", features = ["rstar", "approx"] }
validator = { version = "0.16.1", features = ["derive"] }
itertools = "0.11.0"
num_cpus = "1.13"
osm_boundaries_utils = "0.12"
osmpbfreader = "0.16"
rstar = "0.11.0"
async-trait = "0.1.68"
toml = "0.8.0"
convert_case = "0.6.0"
chrono = "0.4"
chrono-tz = "0.8.2"
human-sort = "0.2"
typed_index_collection = "2.0"
serial_test = "2.0.0"
postal = "0.2.5"
exporter-config = { path = "crates/libs/exporter-config" }
elastic-client = { path = "crates/libs/elastic-client" }
elastic-query-builder = { path = "crates/libs/elastic-query-builder" }
lib-geo = { path = "crates/libs/lib-geo" }
serde-helpers = { path = "crates/libs/serde-helpers" }
qwant-geojson =  { path = "crates/libs/qwant-geojson" }
places = { path = "crates/libs/places" }
tagger = { path = "crates/libs/tagger" }
test-containers = { path = "crates/tests/test-containers" }
autometrics = { version = "0.6.0", features = ["prometheus-exporter"] }
approx = "0.5"
bk-tree = "0.5.0"
trie-rs = "0.1.1"
once_cell = "1.18.0"
diacritics = "0.2.0"
