[package]
name = "geocoder-server"
description = "Human readable query to elastic search geo-query"
version = "0.1.0"
edition = "2021"
license = "AGPLv3"
repository = "https://git.qwant.ninja/product/maps/mimirsbrunn"

[dependencies]
exporter-config.workspace = true
elastic-client.workspace = true
places.workspace = true
serde-helpers.workspace = true
elastic-query-builder.workspace = true

clap.workspace = true
geo.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
schemars.workspace = true
axum.workspace = true
axum-macros.workspace = true
tower-http.workspace = true
tower.workspace = true
aide.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
autometrics.workspace = true
axum-common.workspace = true
vergen.workspace  = true
validator.workspace = true
config.workspace = true

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8"
serial_test.workspace = true
speculoos.workspace = true

