[package]
name = "openaddresses-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-geo.workspace = true
exporter-config.workspace = true
elastic-client.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
futures.workspace = true
elastic-query-builder.workspace = true
places.workspace = true
serde-helpers.workspace = true
serial_test.workspace = true
tokio.workspace = true
test-containers.workspace = true
