[package]
name = "osm-importer"
version = "0.1.0"
edition = "2021"


[features]
db-storage = [ "lib-geo/db-storage" ]

[dependencies]
lib-geo.workspace = true
exporter-config.workspace = true
elastic-client.workspace = true
serde-helpers.workspace = true
places.workspace = true
tokio.workspace = true
futures.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
