[package]
name = "poi-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-geo.workspace = true
runtime.workspace = true
exporter-config.workspace = true
elastic-client.workspace = true
elastic-query-builder.workspace = true
places.workspace = true
serde-helpers.workspace = true
futures.workspace = true
navitia-poi-model.workspace = true

clap.workspace = true
snafu.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
serial_test.workspace = true
test-harness.workspace = true
test-containers.workspace = true
tokio.workspace = true
futures.workspace = true
places.workspace = true
