[package]
name = "tagger-api"
version = "0.1.0"
edition = "2021"

[features]
default = []
address = [ "tagger/address"]

[dependencies]
tagger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
axum-macros.workspace = true
axum-jsonschema.workspace = true
tower-http.workspace = true
aide.workspace = true
tokio.workspace = true
anyhow.workspace = true
schemars.workspace = true
uuid.workspace = true
reqwest.workspace = true
clap.workspace = true
autometrics.workspace = true

