[package]
name = "elastic-query-builder"
description = "library for building elasticsearch geo-query"
version = "0.1.0"
edition = "2021"
license = "AGPLv3"
repository = "https://git.qwant.ninja/product/maps/mimirsbrunn"

[dependencies]
places.workspace = true
serde-helpers.workspace = true
qwant-geojson.workspace = true
cosmogony.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
convert_case.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
validator.workspace = true
schemars.workspace = true
