[package]
name = "places"
version = "2.10.1"
authors = ["Hove", "Qwant"]
edition = "2021"
description = "Collection of elastic search places struct"
license = "AGPLv3"
repository = "https://git.qwant.ninja/product/maps/mimirsbrunn"
keywords = ["mimirsbrunn", "elasticsearch", "geocoding"]
categories = ["application"]
readme = "README.md"

[dependencies]
cosmogony.workspace = true
geo-types.workspace = true
qwant-geojson.workspace = true
serde.workspace = true
schemars.workspace = true
validator.workspace = true

[dev-dependencies]
serde_json.workspace = true
