[package]
name = "qwant-geojson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.107"
geo-types = "0.7.11"
thiserror = "1.0.48"
schemars = { version = "0.8.15", features = ["derive"] }
[dev-dependencies]
