[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
description = "Helper library to run geo exporter with tokio runtime"
license = "AGPLv3"
repository = "https://git.qwant.ninja/product/maps/mimirsbrunn"

[dependencies]
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
lazy_static.workspace = true
num_cpus.workspace = true
