[package]
name = "test-containers"
version = "0.1.0"
edition = "2021"
description = "Helper crate to setup test containers"
license = "AGPLv3"
repository = "https://git.qwant.ninja/product/maps/mimirsbrunn"

[dependencies]
bollard = "0.15.0"
exporter-config.workspace = true
elastic-client.workspace = true
tokio.workspace = true
anyhow.workspace = true
elasticsearch.workspace = true
futures-util = "0.3.28"
reqwest.workspace = true
