[package]
name = "test-harness"
version = "2.10.1"
authors = ["Hove", "Qwant"]
edition = "2021"
description = "Mimirsbrunn test-harness"
license = "AGPLv3"
repository = "https://git.qwant.ninja/product/maps/mimirsbrunn"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "application" ]
readme = "README.md"

[features]
db-storage = [ "lib-geo/db-storage" ]

[dependencies]
config.workspace = true
exporter-config.workspace = true
elastic-client.workspace = true
elastic-query-builder.workspace = true
futures.workspace = true
lib-geo.workspace = true
places.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
url.workspace = true
zip.workspace = true
bano-importer = { path = "../../bins/bano-importer"}
osm-importer = { path = "../../bins/osm-importer"}
